--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/dist/js/main.js": "/dist/js/main.js",
     "/dist/css/main.css": "/dist/css/main.css",
-    "/dist/js/students_create.js": "/dist/js/students_create.js"
+    "/dist/js/students.js": "/dist/js/students.js"
 }
